updates and changes on configuration of components

--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -5,8 +5,8 @@
     <div class="col-3">
 
       <div class="section-heading">
-        <h3>TRUST</h3>
-        <h2 class="section-title">Companies who use our services</h2>
+        <h3>{{clients.tagline}}</h3>
+        <h2 class="section-title">{{clients.title}}</h2>
         <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod
           tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
