--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -3,8 +3,8 @@
   <div class="row clearfix">
 
     <div class="section-heading">
-      <h3>YOUR CHOICE</h3>
-      <h2 class="section-title">We have the right package for you</h2>
+      <h3>{{pricing.tagline}}</h3>
+      <h2 class="section-title">{{pricing.title}}</h2>
     </div>
 
     <!--Pricing Block-->
