--- a/src/app/testimonial/testimonial.component.html
+++ b/src/app/testimonial/testimonial.component.html
@@ -4,8 +4,8 @@
   <div class="row clearfix">
 
     <div class="section-heading">
-      <h3>FEEDBACK</h3>
-      <h2 class="section-title">What our customers are saying</h2>
+      <h3>{{testimonial.tagline}}</h3>
+      <h2 class="section-title">{{testimonial.title}}</h2>
     </div>
 
     <!--User Testimonial-->
