--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -21,15 +21,12 @@
     <!--Content of the Right Side-->
     <div class="col-3">
       <div class="section-heading">
-        <h3>BELIEVING</h3>
-        <h2 class="section-title">Focusing On What Matters Most</h2>
+        <h3>{{service.tagline}}</h3>
+        <h2 class="section-title">{{service.title}}</h2>
         <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
       </div>
-      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
-        dicta sunt explicabo.
-      </p>
+      <p>{{service.description}}</p>
       <p>
         Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
         consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
