new features, text and images

--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -7,9 +7,7 @@
       <div class="section-heading">
         <h3>{{clients.tagline}}</h3>
         <h2 class="section-title">{{clients.title}}</h2>
-        <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+        <p class="section-subtitle">A true partnership is a two-way street — ideas and information flow openly and regularly, based on a foundation of mutual trust and respect for one another’s expertise — and our clients embrace this philosophy. The best and most productive relationships are synergistic and goal-oriented, and a long-term relationship has the value add of deep-rooted industry and company knowledge and relationships. Our client list speaks for itself.</p>
       </div>
 
     </div>
