--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -8,9 +8,7 @@
     <div class="col-3">
       <!--User Testimonial-->
       <blockquote class="testimonial text-right bigtest">
-        <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore
-          et dolore magna aliqua</q>
+        <q>“Oh Wow” is what I said when I looked at the website. I absolutely LOVE everything!!! It actually brought tears to my eyes.</q>
         <footer>— John Doe, Happy Customer</footer>
       </blockquote>
       <!-- End of Testimonial-->
@@ -23,15 +21,9 @@
       <div class="section-heading">
         <h3>{{service.tagline}}</h3>
         <h2 class="section-title">{{service.title}}</h2>
-        <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
+        <p class="section-subtitle">We listen. We advise. We design. Together. Our success is measured by results, the most important being how our clients feel about their experience with us. Happy customers and ongoing relationships are what we strive for. These reviews affirm that we’re onto something!</p>
       </div>
       <p>{{service.description}}</p>
-      <p>
-        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-        consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet!
-      </p>
       <!-- Just replace the Video ID "UYJ5IjBRlW8" with the ID of your video on YouTube (Found within the URL) -->
       <a href="#" data-videoid="UYJ5IjBRlW8" data-videosite="youtube" class="button video link-lightbox">
         WATCH VIDEO <i class="fa fa-play" aria-hidden="true"></i>
@@ -40,7 +32,7 @@
     <!--End Content Right Side-->
 
     <div class="col-3">
-      <img src="../assets/images/dancer.jpg" alt="Dancer" />
+      <img src="../assets/images/cat.jpg" alt="Cat" />
     </div>
 
   </div>
