--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -11,71 +11,33 @@
       </div>
 
     </div>
-
+   
     <div class="col-2-3">
-
+       
       <!--Icon Block-->
       <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.1s">
-        <!--Icon-->
-        <div class="icon">
-          <i class="fa fa-html5 fa-2x"></i>
-        </div>
+
+          
         <!--Icon Block Description-->
         <div class="icon-block-description">
-          <h4>HTML5 &amp; CSS3</h4>
-          <p>Has ne tritani atomorum conclusionemque, in dolorum volumus cotidieque eum. At vis choro
-            neglegentur iudico</p>
+          <h4>Culture in ePhoto</h4>
+          <p>has grown from a 6-person start-up to become a global player in the stock media industry with hundreds of employees and over 160,000 global contributors. What's remained the same is our passion for moving the world with imagery.</p>
         </div>
       </div>
+ 
       <!--End of Icon Block-->
 
       <!--Icon Block-->
       <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.3s">
-        <!--Icon-->
-        <div class="icon">
-          <i class="fa fa-bolt fa-2x"></i>
-        </div>
+
         <!--Icon Block Description-->
         <div class="icon-block-description">
-          <h4>Easy to Use</h4>
-          <p>Cu vero ipsum vim, doctus facilisi sea in. Eam ex falli honestatis repudiandae, sit
-            detracto mediocrem disputationi</p>
+          <h4>We're always looking for people to join our team.</h4>
+          <p>Artists are at the heart of everything we do and the reason why ePhoto has continued to be an important destination for stock content. By providing a platform for our artists to distribute some of the best stock content in the world, ePhoto has given them the opportunity to transform their lives by making a living through their art.</p>
         </div>
       </div>
       <!--End of Icon Block-->
-
-      <!--Icon Block-->
-      <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.5s">
-        <!--Icon-->
-        <div class="icon">
-          <i class="fa fa-tablet fa-2x"></i>
-        </div>
-        <!--Icon Block Description-->
-        <div class="icon-block-description">
-          <h4>Fully Responsive</h4>
-          <p>Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an pro
-            nemore vivendum</p>
-        </div>
-      </div>
-      <!--End of Icon Block-->
-
-      <!--Icon Block-->
-      <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.5s">
-        <!--Icon-->
-        <div class="icon">
-          <i class="fa fa-rocket fa-2x"></i>
-        </div>
-        <!--Icon Block Description-->
-        <div class="icon-block-description">
-          <h4>Parallax Effect</h4>
-          <p>Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an pro
-            nemore vivendum</p>
-        </div>
-      </div>
-      <!--End of Icon Block-->
-
     </div>
-
   </div>
 
 
