--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -14,7 +14,7 @@
         <p class="pricing-sub">The standard version</p>
         <div class="pricing">
           <div class="price"><span>$</span>19</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          <p>Standard</p>
         </div>
         <ul>
           <li>5 Downloads</li>
@@ -35,7 +35,7 @@
         <p class="pricing-sub">Most popular choice</p>
         <div class="pricing">
           <div class="price"><span>$</span>29</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          <p>Most popular and used!</p>
         </div>
         <ul>
           <li>15 Downloads</li>
@@ -56,7 +56,7 @@
         <p class="pricing-sub">For the whole team</p>
         <div class="pricing">
           <div class="price"><span>$</span>49</div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          <p>For enerprises or customers who need more features.</p>
         </div>
         <ul>
           <li>Unlimited Downloads</li>
