--- a/src/app/testimonial/testimonial.component.html
+++ b/src/app/testimonial/testimonial.component.html
@@ -11,9 +11,7 @@
     <!--User Testimonial-->
     <blockquote class="col-3 testimonial classic">
       <img src="../assets/images/user-images/user-1.jpg" alt="User" />
-      <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-        labore
-        et dolore magna aliqua</q>
+      <q>Your thoughtfulness and support is very much appreciated. I want to assure you that your confidence in us will be justified.</q>
       <footer>John Doe - Happy Customer</footer>
     </blockquote>
     <!-- End of Testimonial-->
@@ -21,20 +19,16 @@
     <!--User Testimonial-->
     <blockquote class="col-3 testimonial classic">
       <img src="../assets/images/user-images/user-2.jpg" alt="User" />
-      <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-        labore
-        et dolore magna aliqua</q>
-      <footer>Roslyn Doe - Happy Customer</footer>
+      <q>ePhoto is attentive, personable, and professional. Your team provide great support for my company's needs.</q>
+      <footer>Roslyn Herzog - Happy Customer</footer>
     </blockquote>
     <!-- End of Testimonial-->
 
     <!--User Testimonial-->
     <blockquote class="col-3 testimonial classic">
       <img src="../assets/images/user-images/user-3.jpg" alt="User" />
-      <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-        labore
-        et dolore magna aliqua</q>
-      <footer>Thomas Doe - Happy Customer</footer>
+      <q>Always available to answer any questions. Very knowledgeable about the services they provide. Would recommend to anyone!</q>
+      <footer>Thomas Lowder - Happy Customer</footer>
     </blockquote>
     <!-- End of Testimonial-->
 
